# prefect_jobs

./: .bumpversion.cfg  .dockerignore  .gitignore  CHANGELOG.rst  Dockerfile  MANIFEST.in  README.rst  dask-config.yaml  docker-compose.yaml  environment.yaml  pyproject.toml  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: unit-tests.yml
docs/source/: changelog.rst  conf.py  deployment.rst  developing_flows.rst  developing_tasks.rst  guidelines.rst  hdf5.rst  iguazu.cli.rst  iguazu.core.rst  iguazu.flows.rst  iguazu.functions.rst  iguazu.helpers.rst  iguazu.rst  iguazu.tasks.rst  index.rst  key_concepts.rst  modules.rst  versioning.rst
docs/source/specs/: events.rst  features.rst  signals.rst
helm/iguazu/: Chart.yaml  values.yaml
helm/iguazu/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  dask-scheduler-deployment.yaml  dask-scheduler-service.yaml  dask-worker-deployment.yaml  dask-worker-scaler.yaml  iguazu-scheduler-deployment.yaml  iguazu-scheduler-service.yaml  iguazu-worker-deployment.yaml  ingress.yaml  (+3 more)
iguazu/: __init__.py  cache_validators.py  cli.py  executors.py  recipes.py  utils.py
iguazu/cli/: dask.py  deploy.py  flows.py  main.py  scheduler.py
iguazu/core/: exceptions.py  features.py  files.py  flows.py  handlers.py  options.py  tasks.py  validators.py
iguazu/flows/: __init__.py  behavior.py  cardiac.py  datasets.py  galvanic.py  respiration.py  standards.py  summarize_behavior.py  summarize_galvanic.py  surveys.py  typeform.py
iguazu/functions/: __init__.py  behavior.py  cardiac.py  common.py  galvanic.py  hrv.py  ppg_report.py  respiration.py  specs.py  spectral.py  summarize.py  surveys.py  typeform.py  unity.py  vr_unity_events.py
iguazu/helpers/: decorators.py  files.py  states.py  tasks.py
iguazu/tasks/: __init__.py  behavior.py  cardiac.py  common.py  galvanic.py  handlers.py  metadata.py  quetzal.py  respiration.py  signals.py  spectral.py  standards.py  summarize.py  surveys.py  typeform.py  unity.py  vr.py  vr_unity_events.py
tests/: test_quetzal_flows.py
tests/core/: conftest.py  test_auto_dataframe.py  test_caching.py  test_managed_task.py  test_task.py
tests/flows/: test_prepared_flows.py
tests/specs/: test_event_specs.py  test_feature_specs.py  test_signal_specs.py
tests/typeform/: conftest.py  test_dimension_model.py  test_domain_model.py  test_models.py  test_question_model.py  test_schemas.py  test_vr_questionnaire.py
(+21 files in other folders)
